add brand_primary_color color

--- a/packages/messaging/android/src/main/res/values/colors.xml
+++ b/packages/messaging/android/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+  <color name="brand_primary_color">#17BFDD</color>
   <color name="white">#FFFFFF</color>
   <color name="ivory">#FFFFF0</color>
   <color name="lightyellow">#FFFFE0</color>
